--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-  font-family: 'SF Pro Text', 'SF Pro Icons', 'Helvetica Neue', 'Helvetica',
-    'Arial', sans-serif;
+  font-family: "SF Pro Text", "SF Pro Icons", "Helvetica Neue", "Helvetica",
+    "Arial", sans-serif;
   box-sizing: border-box;
   padding: 20px 20px 60px;
   max-width: 680px;
@@ -47,7 +47,7 @@ pre {
 
 code:before,
 code:after {
-  content: '`';
+  content: "`";
 }
 
 p {
