updated styles to entire body, updated titles + h1s

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2195,7 +2195,7 @@ input, select, textarea {
 		}
 
 			.panel > *.color0 {
-				background-image: url("../../images/overlay.png"), linear-gradient(45deg, #726193 20%, #e37b7c 60%, #ffe4b4);
+				background-image: url("../../images/overlay.png"), linear-gradient(45deg, black 20%, red 60%, #20021c);
 				background-size: 128px 128px, auto;
 			}
 
@@ -2206,9 +2206,10 @@ input, select, textarea {
 			}
 
 			.panel > *.color2 {
-				background-image: url("../../images/overlay.png"), linear-gradient(45deg, rgba(114, 97, 147, 0.25) 25%, rgba(227, 123, 124, 0.25) 50%, rgba(255, 228, 180, 0.25));
-				background-size: 128px 128px, auto;
-				background-color: #e37b7c;
+				background-image: url("../../images/action-athlete-barbell.jpg");
+				background-repeat: no-repeat;
+				background-size: cover;
+				background-color: darkred;
 			}
 
 			.panel > *.color3 {
@@ -2218,9 +2219,8 @@ input, select, textarea {
 			}
 
 			.panel > *.color4 {
-				background-image: url("../../images/overlay.png"), linear-gradient(45deg, rgba(114, 97, 147, 0.25) 25%, rgba(227, 123, 124, 0.25) 50%, rgba(255, 228, 180, 0.25));
+				background-image: url(../../images/overlay.png), linear-gradient(58deg, black 20%, red 60%, #20021c);
 				background-size: 128px 128px, auto;
-				background-color: #353865;
 			}
 
 			.panel > *.color1-alt {
@@ -2712,14 +2712,13 @@ input, select, textarea {
 		}
 
 		.panel.color0 {
-			background-image: url("../../images/overlay.png"), linear-gradient(45deg, #726193 20%, #e37b7c 60%, #ffe4b4);
+			background-image: url("../../images/overlay.png"), linear-gradient(45deg, #4212a1 20%, #e37b7c 60%, #ffe4b4);
 			background-size: 128px 128px, auto;
 		}
 
 		.panel.color1 {
-			background-image: url("../../images/overlay.png"), linear-gradient(45deg, rgba(114, 97, 147, 0.25) 25%, rgba(227, 123, 124, 0.25) 50%, rgba(255, 228, 180, 0.25));
-			background-size: 128px 128px, auto;
-			background-color: #726193;
+			background-image: url("../../images/overlay.png"), linear-gradient(138deg, black 20%, red 60%, #20021c);
+    		background-size: 128px 128px, auto;
 		}
 
 		.panel.color2 {
@@ -2759,9 +2758,8 @@ input, select, textarea {
 		}
 
 		.panel.color4-alt {
-			background-image: url("../../images/overlay.png"), linear-gradient(45deg, rgba(114, 97, 147, 0.175) 25%, rgba(227, 123, 124, 0.175) 50%, rgba(255, 228, 180, 0.175));
+			background-image: url(../../images/overlay.png), linear-gradient(165deg, black 20%, red 60%, #20021c);
 			background-size: 128px 128px, auto;
-			background-color: #323459;
 		}
 
 	@media screen and (max-width: 736px) {
