--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3400,8 +3400,8 @@ input, select, textarea {
 			.panel.spotlight .image img {
 				-moz-object-fit: cover;
 				-webkit-object-fit: cover;
-				-ms-object-fit: unset;
-				object-fit: unset;
+				-ms-object-fit: cover;
+				object-fit: cover;
 				display: block;
 				position: absolute;
 				top: 0;
