--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3572,7 +3572,7 @@ input, select, textarea {
 			bottom: -3rem;
 			right: 0;
 			font-size: 0.8rem;
-			color: rgba(46, 43, 55, 0.375);
+			color: white;
 			margin-bottom: 0;
 		}
 
